Fixes the two gifs to align properly

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ body p {
 #left-arrow {
 	margin-top: 50px;
 	max-width: 25%;
-	margin-left: 25%;
 }
 
 #ccnn-live-animation {
